--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>homework</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../public/css/style.css" />
     <link
       href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css"
       rel="stylesheet"
@@ -31,7 +31,7 @@
               <span>Holla,</span>
               <h4>Ales Nesertil</h4>
             </div>
-            <img src="../public/avatar.png" alt="avatar" />
+            <img src="./images/avatar.png" alt="avatar" />
           </div>
         </nav>
       </div>
@@ -92,32 +92,32 @@
         <h2 class="title">Popular Destinations</h2>
         <div class="imgs">
           <div class="img">
-            <img src="../public/img1.png" alt="photo" />
+            <img src="./images/img1.png" alt="photo" />
             <span class="s1">Big Sur</span>
             <span class="text">California, USA</span>
           </div>
           <div class="img">
-            <img src="../public/img2.png" alt="photo" />
+            <img src="./images/img2.png" alt="photo" />
             <span class="s1">Prescott</span>
             <span class="text">Arizona, USA</span>
           </div>
           <div class="img">
-            <img src="../public/img3.png" alt="photo" />
+            <img src="./images/img3.png" alt="photo" />
             <span class="s1">Fort Mayers</span>
             <span class="text">Florida, USA</span>
           </div>
           <div class="img">
-            <img src="../public/img4.png" alt="photo" />
+            <img src="./images/img4.png" alt="photo" />
             <span class="s1">Tucson</span>
             <span class="text">Arizona, USA</span>
           </div>
           <div class="img">
-            <img src="../public/img5.png" alt="photo" />
+            <img src="./images/img5.png" alt="photo" />
             <span class="s1">St. Joseph</span>
             <span class="text">Michigan, USA</span>
           </div>
           <div class="img">
-            <img src="../public/img6.png" alt="photo" />
+            <img src="./images/img6.png" alt="photo" />
             <span class="s1">Madrid</span>
             <span class="text">Spain</span>
           </div>
@@ -130,7 +130,7 @@
         </div>
         <div class="imgs1">
           <div class="img1">
-            <img src="../public/img7.png" alt="photo" />
+            <img src="./images/img7.png" alt="photo" />
             <span class="s1">Monastero Santa Rosa Hotel</span>
             <div class="loc">
               <div>
@@ -151,7 +151,7 @@
           </div>
 
           <div class="img1">
-            <img src="../public/img8.png" alt="photo" />
+            <img src="./images/img8.png" alt="photo" />
             <span class="s1">Grand Hotel Tremezzo</span>
             <div class="loc">
               <div>
@@ -172,7 +172,7 @@
           </div>
 
           <div class="img1">
-            <img src="../public/img9.png" alt="photo" />
+            <img src="./images/img9.png" alt="photo" />
             <span class="s1">The Oberoi Udaivilas, Udaipur</span>
             <div class="loc">
               <div>
@@ -193,7 +193,7 @@
           </div>
 
           <div class="img1">
-            <img src="../public/img10.png" alt="photo" />
+            <img src="./images/img10.png" alt="photo" />
             <span class="s1">AKA Beverly Hills</span>
             <div class="loc">
               <div class="loc">
@@ -221,7 +221,7 @@
         </div>
         <div class="imgs1">
           <div class="img1">
-            <img src="../public/img11.png" alt="photo" />
+            <img src="./images/img11.png" alt="photo" />
           </div>
 
           <div class="img2">
@@ -257,7 +257,7 @@
           </div>
 
           <div class="img1">
-            <img src="../public/img12.png" alt="photo" />
+            <img src="./images/img12.png" alt="photo" />
           </div>
 
           <div class="img2">
@@ -300,22 +300,22 @@
         </div>
         <div class="imgs1">
           <div class="img1">
-            <img src="../public/img13.png" alt="photo" />
+            <img src="./images/img13.png" alt="photo" />
             <span class="s1">Sailing</span>
           </div>
 
           <div class="img1">
-            <img src="../public/img14.png" alt="photo" />
+            <img src="./images/img14.png" alt="photo" />
             <span class="s1">Climbing</span>
           </div>
 
           <div class="img1">
-            <img src="../public/img15.png" alt="photo" />
+            <img src="./images/img15.png" alt="photo" />
             <span class="s1">Sking</span>
           </div>
 
           <div class="img1">
-            <img src="../public/img16.png" alt="photo" />
+            <img src="./images/img16.png" alt="photo" />
             <span class="s1">Hiking</span>
             <div class="loc"></div>
           </div>
@@ -341,7 +341,7 @@
           </div>
 
           <div class="img2">
-            <img src="../public/img17.png" alt="photo" />
+            <img src="./images/img17.png" alt="photo" />
           </div>
         </div>
       </section>
