--- a/public/index1.html
+++ b/public/index1.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>homework</title>
-    <link rel="stylesheet" href="../css/style1.css" />
+    <link rel="stylesheet" href="/public/css/style1.css" />
   </head>
   <body>
     <header class="header">
       <div class="logo">
-        <img src="../public/Logo.svg" alt="Logo" />
+        <img src="./images/Logo.svg" alt="Logo" />
       </div>
       <nav class="navbar">
         <a href="#">Featured</a>
@@ -33,7 +33,7 @@
           >
           <button>Get Started</button>
         </div>
-        <img src="../public/Saly-11.svg" alt="Saly" />
+        <img src="./images/Saly-11.svg" alt="Saly" />
       </section>
       <section>
         <div class="hero-title">
@@ -42,16 +42,16 @@
         </div>
         <div class="cards">
           <div class="card">
-            <img src="../public/Rectangle 16.png" alt="" />
+            <img src="./images/Rectangle 16.png" alt="" />
           </div>
           <div class="card">
-            <img src="../public/Rectangle 17.png" alt="" />
+            <img src="./images/Rectangle 17.png" alt="" />
           </div>
           <div class="card">
-            <img src="../public/Rectangle 18.png" alt="" />
+            <img src="./images/Rectangle 18.png" alt="" />
           </div>
           <div class="card">
-            <img src="../public/Rectangle 19.png" alt="" />
+            <img src="./images/Rectangle 19.png" alt="" />
           </div>
         </div>
       </section>
@@ -63,24 +63,24 @@
         <div class="cards1">
           <div class="card1">
             <div class="cardd">
-              <img src="../public/Article-1.png" alt="card" />
+              <img src="./images/Article-1.png" alt="card" />
             </div>
             <div>
-              <img src="../public/Article-2.png" alt="card" />
+              <img src="./images/Article-2.png" alt="card" />
             </div>
           </div>
 
           <div class="card1">
             <div class="cardd">
-              <img src="../public/Article-3.png" alt="card" />
+              <img src="./images/Article-3.png" alt="card" />
             </div>
             <div>
-              <img src="../public/Article-4.png" alt="card" />
+              <img src="./images/Article-4.png" alt="card" />
             </div>
           </div>
 
           <div class="card1">
-            <img src="../public/Collect Section.png" alt="card" />
+            <img src="./images/Collect Section.png" alt="card" />
           </div>
         </div>
       </section>
@@ -94,7 +94,7 @@
               <span>Become a partner</span>
             </div>
             <div class="info1">
-              <span>Public reviews</span>
+              <span>images reviews</span>
               <span>Privacy guide</span>
               <span>Term condition</span>
               <span>Help & support</span>
@@ -102,10 +102,10 @@
           </div>
           <div class="right-section">
             <div class="logo">
-              <img src="../public/Logo.png" alt="logo" />
+              <img src="./images/Logo.png" alt="logo" />
               <h2>Lunchpiration</h2>
             </div>
-            <span 
+            <span
               >All media, contents, articles and everything here are have
               copyright material and law.</span
             >
